# voxplorer

./: .gitignore  LICENSE  README.md  app.py  download_huggingface_model.py  pyproject.toml  requirements.txt  todo.md
.github/: copilot-instructions.md
assets/: custom_classes.css  styles.css
lib/: __init__.py  data_loader.py  db_loader.py  dimensionality_reduction.py  feature_extraction.py  plotting.py
lib/tests/: plotting_test.py
logs/: embeddings (conflicted copy 2023-12-13 130133).tsv  embeddings.tsv  metadata.tsv  projector_config.pbtxt
pages/: home.py  visualiser.py
pages/layouts/visualiser/: dimensionality_reduction_opts.py  feature_extraction_opts.py  meta_config_card.py  plot_layout.py  table_preview.py
pages/layouts/visualiser/audio_upload/: audio_upload.py  feature_extraction_opts.py
pages/layouts/visualiser/table_upload/: metaconfig.py  table_upload.py
test/: test_data_loader.py  test_dimensionality_reduction.py  test_feature_extraction.py
test/data/: fakeSaar.tsv
tests/: db_loader_test.py  feature_extraction_test.py
tests/data/: fakeSaar.xlsx
voxplorer/assets/: flatly-bootstrap.css
voxplorer/lib/: feature_extraction.py
voxplorer/pages/: visualiser.py
