[project]
name = "voxplorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.7.1",
    "dash-mantine-components>=0.15.3",
    "fastexcel>=0.13.0",
    "librosa>=0.10.2.post1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.23.0",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.1",
    "speechbrain>=1.0.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "ruff>=0.11.12",
]
